{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 78,
  "lineage": "2bb8e582-44fd-f795-8e53-17754688e941",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b3aa8a93dd09c13",
            "arn": "arn:aws:ec2:ap-south-1:386721332043:instance/i-07eb1d07770f3a3c0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07eb1d07770f3a3c0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Nat instance",
            "monitoring": false,
            "primary_network_interface_id": "eni-087891ed32ae7b04f",
            "private_dns": "ip-10-0-30-69.ap-south-1.compute.internal",
            "private_ip": "10.0.30.69",
            "public_ip": "13.233.93.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 0,
                "volume_id": "vol-09fffbe5b92e46d41",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-006c62a4af578eef6",
            "tags": {
              "Name": "nat instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ec511690f7d151c"
            ]
          },
          "depends_on": [
            "aws_subnet.pub-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2692b6acea72ee6",
            "arn": "arn:aws:ec2:ap-south-1:386721332043:instance/i-0f3211a6ae15c99a1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f3211a6ae15c99a1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Nat instance",
            "monitoring": false,
            "primary_network_interface_id": "eni-095f9e1f2355a4d7d",
            "private_dns": "ip-10-0-33-171.ap-south-1.compute.internal",
            "private_ip": "10.0.33.171",
            "public_ip": "13.235.80.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-02d521c03708dabad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0abfb58dc75cd8340",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ec511690f7d151c"
            ]
          },
          "depends_on": [
            "aws_subnet.pub-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0736e008a840855ea",
            "owner_id": "386721332043",
            "tags": {
              "Name": "for-public"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08f386129c2c3cd1e",
            "owner_id": "386721332043",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-07eb1d07770f3a3c0",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-087891ed32ae7b04f",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-route"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_instance.web",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01654f8d2cb3beac0",
            "owner_id": "386721332043",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0736e008a840855ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route1"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_internet_gateway.Igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088293a963d767921",
            "route_table_id": "rtb-08f386129c2c3cd1e",
            "subnet_id": "subnet-0a77bc1fb77f06364"
          },
          "depends_on": [
            "aws_route_table.pri-route",
            "aws_subnet.pri-sub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069592610802b2725",
            "route_table_id": "rtb-08f386129c2c3cd1e",
            "subnet_id": "subnet-01357604e420aab7a"
          },
          "depends_on": [
            "aws_route_table.pri-route",
            "aws_subnet.pri-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0190fa7da065c05ff",
            "route_table_id": "rtb-01654f8d2cb3beac0",
            "subnet_id": "subnet-006c62a4af578eef6"
          },
          "depends_on": [
            "aws_route_table.public-route",
            "aws_subnet.pub-sub",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5146593074ca84",
            "route_table_id": "rtb-01654f8d2cb3beac0",
            "subnet_id": "subnet-0abfb58dc75cd8340"
          },
          "depends_on": [
            "aws_route_table.public-route",
            "aws_subnet.pub-sub",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02599d56698917d84",
            "route_table_id": "rtb-01654f8d2cb3beac0",
            "subnet_id": "subnet-0de810f3553c9d7b5"
          },
          "depends_on": [
            "aws_route_table.public-route",
            "aws_subnet.pub-sub",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:security-group/sg-088c25a22aa6c811d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088c25a22aa6c811d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "386721332043",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:subnet/subnet-0a77bc1fb77f06364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.80.0/24",
            "id": "subnet-0a77bc1fb77f06364",
            "map_public_ip_on_launch": false,
            "owner_id": "386721332043",
            "tags": {
              "Name": "pri-subnet"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:subnet/subnet-01357604e420aab7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.82.0/24",
            "id": "subnet-01357604e420aab7a",
            "map_public_ip_on_launch": false,
            "owner_id": "386721332043",
            "tags": {
              "Name": "pri-subnet"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:subnet/subnet-006c62a4af578eef6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-006c62a4af578eef6",
            "map_public_ip_on_launch": true,
            "owner_id": "386721332043",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:subnet/subnet-0abfb58dc75cd8340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.33.0/24",
            "id": "subnet-0abfb58dc75cd8340",
            "map_public_ip_on_launch": true,
            "owner_id": "386721332043",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:subnet/subnet-0de810f3553c9d7b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.35.0/24",
            "id": "subnet-0de810f3553c9d7b5",
            "map_public_ip_on_launch": true,
            "owner_id": "386721332043",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0402550279b594175"
          },
          "depends_on": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386721332043:vpc/vpc-0402550279b594175",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b83bc6baf1b8df8",
            "default_route_table_id": "rtb-02a5cee710e7ef806",
            "default_security_group_id": "sg-06ec511690f7d151c",
            "dhcp_options_id": "dopt-9d7362f5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0402550279b594175",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02a5cee710e7ef806",
            "owner_id": "386721332043",
            "tags": {
              "Name": "Tenzz-VPC"
            }
          }
        }
      ]
    }
  ]
}